src/test/resources/de/cd4analysis/cocos/mcg2ebnf/valid/CD4AC3005.cd
package de.cd4analysis.cocos;

classdiagram CD4AC3005 {

	interface A;

}