src/test/resources/de/cd4analysis/cocos/mcg2ebnf/invalid/CD4AC3009.cd
package de.cd4analysis.cocos;

classdiagram CD4AC3009 {
	enum A {
		;
		A();
	}
	enum B {
		E(1);
		B (int a);
	}
	enum C {
		E("asd", 1);
		C (String a, int b);
	}
}